# BadMinecraft

./: .gitignore  CMakeLists.txt  Makefile  README.MD
include/: game.hpp
include/block/: block.hpp
include/entity/: camera.h  camera.hpp
include/gfx/: camera.hpp  gfx.h  renderer.h  renderer.hpp  shader.h  vao.h  vbo.h  window.h  window.hpp
include/meshing/: chunkmesher.hpp
include/util/: includes.hpp  macros.hpp  perlin.hpp
include/world/: chunk.hpp  world.hpp  worldgen.hpp
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
src/: main.cpp
src/block/: block.cpp
src/entity/: camera.cpp
src/gfx/: camera.cpp  renderer.cpp  shader.cpp  texture.cpp  vao.cpp  vbo.cpp  window.cpp
src/meshing/: chunkmesher.cpp
src/world/: world.cpp  worldgen.cpp
